added Floor Guide for Shuten Trail Mid

--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -140,23 +140,213 @@
           </ol>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="quiet_cave">01~02F Quiet Cave</h3>
-          <p></p>
+          <p>
+            Monsters include <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a>, <a href="/shiren2/html/system/monster.html#mamel_family">Pit Mamel</a>, and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>, along with <a href="/shiren2/html/system/monster.html#ashigarudon_family">Ashigarudon</a> on 2F.
+          </p>
+          <p>
+            Pit Mamels deal 3~4 damage without a shield, so be sure to move into a<br>
+            hallway to take them on one at a time if there are other monsters around.
+          </p>
+          <p>
+            Ashigarudons have 10 HP which is on the higher end, but they only use regular attacks.<br>
+            Stay calm and you shouldn't have too much trouble defeating them.
+          </p>
+          <p>
+            On a side note, the music for this area is slightly different than the first trail's Green Forest.
+          </p>
           <h3 id="ravine_stream">03~04F Ravine Stream (Shuffle)</h3>
-          <p></p>
+          <p>
+            New monsters include <a href="/shiren2/html/system/monster.html#yamikichi_family">Yamikichi</a> and <a href="/shiren2/html/system/monster.html#nigiri_trainee_family">Nigiri Trainee</a>, along with <a href="/shiren2/html/system/monster.html#droplet_ninja_family">Droplet Ninja</a> on 4F.
+          </p>
+          <p>
+            Both Nigiri Trainee and Yamikichi only use regular attacks,<br>
+            so they shouldn't be too threatening if you leveled Shiren up a bit.<br>
+            Note that Yamikichi floats on a cloud, so it can cut corners while pursuing you.
+          </p>
+          <p>
+            Droplet Ninja will place a Droplet Trap on the ground when defeated, so lure it<br>
+            on top of an item or into a room before defeating it to avoid stepping on the trap.
+          </p>
+          <p>
+            This area has a similar appearance to Small Valley and the first trail's Inexaustible Falls,<br>
+            but Ravine Stream typically has larger rooms than those two areas.
+          </p>
           <h3 id="lapis_grotto">05F Lapis Grotto</h3>
-          <p></p>
+          <p>
+            New monsters include <a href="/shiren2/html/system/monster.html#bow_boy_family">Bow Boy</a> and <a href="/shiren2/html/system/monster.html#chintala_family">Mid Chintala</a>.
+          </p>
+          <p>
+            Bow Boys shoot Wooden Arrows at you from a distance, so move up and down<br>
+            or left and right to lure them closer while avoiding their attacks.<br>
+            They occasionally drop some Wooden Arrows when defeated.
+          </p>
+          <p>
+            Mid Chintalas have a moderate amount of attack and HP at this point in the dungeon,<br>
+            so you may want to use arrows to weaken them before using regular attacks.
+          </p>
+          <p>
+            It would be a good idea to spend time here to level Shiren up before proceeding.
+          </p>
           <h3 id="dororo_creek">06~07F Dororo Creek (Shuffle)</h3>
-          <p></p>
+          <p>
+            The first real danger zone of this dungeon.
+          </p>
+          <p>
+            Poison Arrow and Spoil traps are common in this area, so you'll want to keep<br>riceballs inside Storage Pots to prevent them from turning into Spoiled Riceballs.
+          </p>
+          <p>
+            Be careful of <a href="/shiren2/html/system/monster.html#gazer_family">Gazer</a>, as it can hypnotize Shiren and make him perform a random action.<br>
+            If you're unlucky, you may find yourself eating Revival Grass or reading a Retreat Scroll.<br>
+            Use ranged attacks to weaken/defeat it before it gets a chance to use its special attack.<br>
+            An Echo Shield can reflect its hypnosis, but it's not obtainable yet at this point in the game.
+          </p>
+          <p>
+            <a href="/shiren2/html/system/monster.html#spearfish_family">Lt. Spearfish</a> can be an annoying monster in this area because it has a tendency to dash<br>
+            toward water to recover HP when its HP gets low, and can also attack you from inside water.
+            <br>Shoot arrows to finish them off as they run away to avoid prolonging the fight.
+          </p>
+          <p>
+            A monster called <a href="/shiren2/html/system/monster.html#mr_drone_family">Mr. Drone</a> appears, and will always drop Strength Grass when defeated.<br>
+            Strength matters a lot in Shiren 2 so it's an excellent monster to hunt, but it can<br>
+            be difficult to do so since it runs away from Shiren and can hover over water.<br>
+            <a href="/shiren2/html/system/monster.html#mr_drone_family">Mr. Helico</a> also appears on 7F, and sometimes drops Happy Grass when defeated.
+          </p>
           <h3 id="shuten_halfway">Shuten Halfway</h3>
-          <p></p>
+          <p>
+            See <a href="/shiren2/html/dungeon/shuten_trail_easy.html#shuten_halfway">Shuten Trail Easy</a> for Blacksmith services and Trader's Shop items.<br>
+          </p>
+          <p>
+            Hone your weapon at the Blacksmith, and buy recovery items and food from the Trader's Shop.<br>
+            If you have a lot of money, go ahead and fill your inventory with Otogiriso.
+          </p>
+          <p>
+            Note that it's possible to enter a different trail from the one you started with at Shuten Halfway.<br>
+            If you're finding Shuten Trail Mid to be too difficult, or if you don't feel prepared for the<br>
+            upcoming boss fight, go ahead and enter <a href="/shiren2/html/dungeon/shuten_trail_easy.html">Shuten Trail Easy</a> and come back to Mid later.<br>
+            However, keep in mind that you need to clear the second half of Mid to unlock <a href="/shiren2/html/dungeon/shuten_trail_hard.html">Shuten Trail Hard</a>.
+          </p>
+          <p>
+            On a related note, all unidentified items will be identified when you enter Shuten Trail Easy.
+          </p>
+          </p>
           <h3 id="wandering_cave">08F Wandering Cave</h3>
-          <p></p>
+          <p>
+            <a href="/shiren2/html/system/monster.html#bow_boy_family">Boy Cart</a> moves in a way to keep a distance of 2 tiles between Shiren and itself.<br>
+            It has high attack, so fighting inside of a room can be dangerous.<br>
+            Lure it into a hallway to defeat it without taking damage.<br>
+            However, it will attack if there's a wall or monster behind it.
+          </p>
+          <p>
+            Gazer continues to make an appearance, so do your best to prevent it from getting near you.
+          </p>
+          <p>
+            Dungeon shops occasionally spawn on 8F.<br>
+            They sell a variety of items including "Good" grade castle materials,<br>
+            but they cost a lot so you likely won't be able to buy any at the moment.<br>
+            Stealing is an option, but would be quite difficult at this point in the game.
+          </p>
+          <p>
+            From this point forward, you'll be able to pick up "Good" grade castle materials,<br>
+            along with <a href="/shiren2/html/item/material.html#perfect_wood">Perfect Wood</a>, which is exclusively found in the second half of Shuten Trail Mid.
+          </p>
           <h3 id="great_canyon">09~10F Great Canyon (Shuffle)</h3>
-          <p></p>
+          <p>
+            Another area that resembles Inexhaustible Falls. The exit is always on the upper side of the map.
+          </p>
+          <p>
+            <a href="/shiren2/html/system/monster.html#kengo_family">Kengo</a> is a monster that can <b>fling your equipped shield away</b>, making it fly behind you.<br>
+            Either fight with your back against a wall, or unequip your shield beforehand to avoid losing it.<br>
+            Shoot arrows to weaken/defeat it from a distance, if possible.
+          </p>
+          <p>
+            Also be careful of <a href="/shiren2/html/system/monster.html#sheep_priest_family">Sheep Priest</a>, which can cast a spell that halves your strength for 30 turns.<br>
+            You're likely to collapse if you get surrounded by <a href="/shiren2/html/system/monster.html#gale_family">Gales</a> or other monsters while your strength is halved.
+          </p>
           <h3 id="phantom_pass">11~12F Phantom Pass (Shuffle)</h3>
-          <p></p>
+          <p>
+            Monsters include <a href="/shiren2/html/system/monster.html#kengo_family">Kengo</a>, <a href="/shiren2/html/system/monster.html#droplet_ninja_family">Summon Ninja</a>, <a href="/shiren2/html/system/monster.html#sheep_priest_family">Goat Pastor</a>, <a href="/shiren2/html/system/monster.html#pumphantasm_family">Pumphantasm</a>, and <a href="/shiren2/html/system/monster.html#ashigarudon_family">Taishodon</a>.
+          </p>
+          <p>
+            Again, fight Kengo with either your back against a wall, or with your shield unequipped beforehand.
+          </p>
+          <p>
+            Summon Ninjas place a Summon Trap on the ground when defeated.<br>
+            The walkways are wide in this area, so it should be easy enough to avoid the traps.
+          </p>
+          <p>
+            Goat Pastors can cast a spell that halves Shiren's max HP for 25 turns.<br>
+            Try to fight them when no other monsters are nearby.
+          </p>
+          <p>
+            Taishodons can reflect magic, so you'll likely want to fight them using regular attacks.
+          </p>
+          <p>
+            Traders have a somewhat decent chance of appearing in Phantom Pass.<br>
+            Be careful not to hit the Trader when using long-ranged attacks like arrows or weapons with the 火 seal.
+          </p>
+          <p>
+            Good items to keep on hand for the boss fight: Decoy and Slumber scrolls, Dragon and Swift Grasses, etc.
+          </p>
           <h3 id="headwater_cave">13F Headwater Cave</h3>
-          <p></p>
+          <p>
+            Boss fight against 3 <a href="/shiren2/html/system/monster.html#water_strider">Water Striders</a>.
+          </p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>HP</th>
+              <th>ATK</th>
+              <th>DEF</th>
+              <th>EXP</th>
+              <th>Element</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>Water Strider</td>
+              <td>54</td>
+              <td>18</td>
+              <td>20</td>
+              <td>100</td>
+              <td>Fast (2x)</td>
+              <td><p>Walks on water.<br>Throws items in a staight line within 5 tiles.</p></td>
+            </tr>
+          </table>
+          <p>
+            Water Striders move at double speed, and can pick items up and throw them at Shiren.<br>
+            They can potentially one-shot you if they throw items like Dragon/Flame grass or Gitan.<br>
+            Not only do they move at double speed, but they can attack twice per turn as well.<br>
+          </p>
+          <p>
+            Example strategies:
+          </p>
+          <ol>
+            <li>
+              <p>
+                Read a Decoy Scroll, and then eat Dragon Grass when they run in to attack the shadows.
+              </p>
+            </li>
+            <li>
+              <p>Read 2~3 Lightning Scrolls in a row.</p>
+            </li>
+            <li>
+              <p>
+                Read a Slumber Scroll if the Water Striders are next to you.
+              </p>
+            </li>
+            <li>
+              <p>
+                Read a Blaze Scroll to block thrown items and deal damage to them at the same time.
+              </p>
+            </li>
+            <li>
+              <p>
+                Eat Swift Grass so you can match their speed, and then fight them normally.
+              </p>
+            </li>
+          </ol>
+          <p>
+            There are hidden traps, so it may be a good idea to eat Sight Grass if you happen to have one on hand.
+          </p>
           <h2 id="monsters">Monsters</h2>
           <div class="dungeon_monster_table">
             <table>
