Added Shrine's Hidden Hole dungeon page

--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -23,8 +23,8 @@
                 Dungeon you can enter after clearing Shuten Trail Mid.
               </p>
               <p>
-                Show Saigo the Torn Manuscript over at the beach West of<br>
-                Napus Village to transform it into the Ancient Manuscript,<br>
+                Show Saigo the Torn Manuscript over at the beach West<br>
+                of Napus Village to transform it into the Ancient Manuscript,<br>
                 and then place the Manuscript on the small shrine next to<br>
                 the waterfall in the upper-right corner of Napus Village.
               </p>
