--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -340,7 +340,7 @@
             </li>
             <li>
               <p>
-                Eat Swift Grass so you can match their speed, and then fight them normally.
+                Eat Swift Grass so you match their speed, and then fight them normally.
               </p>
             </li>
           </ol>
