update section headings

--- a/html/dungeon/hidden_hole_b.html
+++ b/html/dungeon/hidden_hole_b.html
@@ -141,20 +141,38 @@
           <h2 id="dungeon_overview">Dungeon Overview</h2>
           <p>Text</p>
           <h2 id="important_items">Basic Strategy</h2>
-          <h3 id="weapon">Monster Pot + Ally Monster Mechanics</h3>
-          <p></p>
           <h3 id="weapon">Important Monsters</h3>
-          <p></p>
-          <h3 id="shield">Other Items</h3>
+          <p>Text (link to Hidden Hole section)</p>
+          <h3 id="weapon">Early Game Leveling</h3>
+          <p>Text</p>
+          <h4>High Exp Monsters</h4>
+          <p>List</p>
+          <h3 id="shield">Important Items</h3>
           <p></p>
           <h2 id="floor_guide">Floor Guide</h2>
-          <h3 id="waterfall_basin">01~10F</h3>
+          <h3 id="waterfall_basin">01~02F</h3>
           <p></p>
-          <h3 id="mountain_cave">11~21F</h3>
+          <h3 id="mountain_cave">03~08F</h3>
           <p></p>
-          <h3 id="hoof_rock_wall">22~60F</h3>
+          <h3 id="hoof_rock_wall">09~12F</h3>
           <p></p>
-          <h3 id="dark_night_cavern">60F~</h3>
+          <h3 id="dark_night_cavern">12~15F</h3>
+          <p></p>
+          <h3 id="mountain_cave">16~18F</h3>
+          <p></p>
+          <h3 id="hoof_rock_wall">22~29F</h3>
+          <p></p>
+          <h3 id="dark_night_cavern">30~39F</h3>
+          <p></p>
+          <h3 id="mountain_cave">40~49F</h3>
+          <p></p>
+          <h3 id="hoof_rock_wall">50~59F</h3>
+          <p></p>
+          <h3 id="dark_night_cavern">60~75F</h3>
+          <p></p>
+          <h3 id="mountain_cave">76~85F</h3>
+          <p></p>
+          <h3 id="hoof_rock_wall">86~99F</h3>
           <p></p>
           <h2 id="monsters">Monsters</h2>
           <div class="hidden_hole_monster_table">
