Added Sealed Room page, fixed a missing div tag

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -564,60 +564,61 @@
               Divide the number by the total for that row to get the %.<br>
               Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
             </p>
-            <h4>Golden Interval</h4>
-            <p class="dungeon_table_notes"></p>
-            <div class="dungeon_monster_table_gold">
-              <table>
-                <tr>
-                  <th>1</th>
-                  <td class="monster_normal">Gamagucci<br>(7)</td>
-                  <td class="monster_item_change">Straw Voodoll<br>(8)</td>
-                  <td class="monster_normal">Rainy Doll<br>(8)</td>
-                  <td class="monster_normal">Summon Ninja<br>(5)</td>
-                  <td class="monster_normal">Landmine Ninja<br>(5)</td>
-                  <td class="monster_normal">Sheep Priest<br>(8)</td>
-                  <td class="monster_weapon">Samuraidon<br>(8)</td>
-                  <td class="monster_weapon">Taishodon<br>(8)</td>
-                  <td class="monster_one_eyed">Golem<br>(4)</td>
-                </tr>
-                <tr>
-                  <th>2</th>
-                  <td class="monster_normal">Gamagucci<br>(7)</td>
-                  <td class="monster_weapon">Kengo<br>(8)</td>
-                  <td class="monster_dragon">Shaaga<br>(8)</td>
-                  <td class="monster_normal">Summon Ninja<br>(5)</td>
-                  <td class="monster_normal">Landmine Ninja<br>(5)</td>
-                  <td class="monster_normal">Sheep Priest<br>(8)</td>
-                  <td class="monster_normal">Goat Pastor<br>(8)</td>
-                  <td class="monster_weapon">Taishodon<br>(8)</td>
-                  <td class="monster_one_eyed">Golem<br>(4)</td>
-                </tr>
-                <tr>
-                  <th>3</th>
-                  <td class="monster_drain">Twisty Hani<br>(5)</td>
-                  <td class="monster_weapon">Kengo<br>(8)</td>
-                  <td class="monster_dragon">Shaaga<br>(8)</td>
-                  <td class="monster_normal">Summon Ninja<br>(5)</td>
-                  <td class="monster_normal">Landmine Ninja<br>(5)</td>
-                  <td class="monster_normal">Sheep Priest<br>(8)</td>
-                  <td class="monster_normal">Goat Pastor<br>(8)</td>
-                  <td class="monster_weapon">Taishodon<br>(8)</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <th>4</th>
-                  <td class="monster_drain">Twisty Hani<br>(5)</td>
-                  <td class="monster_drain">Serious Slug<br>(8)</td>
-                  <td class="monster_dragon">Shaaga<br>(8)</td>
-                  <td class="monster_ghost">Pumphantom<br>(8)</td>
-                  <td class="monster_bomb">Pop Tank<br>(8)</td>
-                  <td class="monster_bomb">Wolf Droid<br>(8)</td>
-                  <td class="monster_normal">Goat Pastor<br>(8)</td>
-                  <td class="monster_water">Bored Kappa<br>(8)</td>
-                  <td class="monster_normal">Armor Spider<br>(5)</td>
-                </tr>
-              </table>
-              <p class="dungeon_table_notes">3~5F total. No enemies on the final floor.</p>
+          </div>
+          <h4>Golden Interval</h4>
+          <p class="dungeon_table_notes"></p>
+          <div class="dungeon_monster_table_gold">
+            <table>
+              <tr>
+                <th>1</th>
+                <td class="monster_normal">Gamagucci<br>(7)</td>
+                <td class="monster_item_change">Straw Voodoll<br>(8)</td>
+                <td class="monster_normal">Rainy Doll<br>(8)</td>
+                <td class="monster_normal">Summon Ninja<br>(5)</td>
+                <td class="monster_normal">Landmine Ninja<br>(5)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_weapon">Samuraidon<br>(8)</td>
+                <td class="monster_weapon">Taishodon<br>(8)</td>
+                <td class="monster_one_eyed">Golem<br>(4)</td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td class="monster_normal">Gamagucci<br>(7)</td>
+                <td class="monster_weapon">Kengo<br>(8)</td>
+                <td class="monster_dragon">Shaaga<br>(8)</td>
+                <td class="monster_normal">Summon Ninja<br>(5)</td>
+                <td class="monster_normal">Landmine Ninja<br>(5)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_normal">Goat Pastor<br>(8)</td>
+                <td class="monster_weapon">Taishodon<br>(8)</td>
+                <td class="monster_one_eyed">Golem<br>(4)</td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td class="monster_drain">Twisty Hani<br>(5)</td>
+                <td class="monster_weapon">Kengo<br>(8)</td>
+                <td class="monster_dragon">Shaaga<br>(8)</td>
+                <td class="monster_normal">Summon Ninja<br>(5)</td>
+                <td class="monster_normal">Landmine Ninja<br>(5)</td>
+                <td class="monster_normal">Sheep Priest<br>(8)</td>
+                <td class="monster_normal">Goat Pastor<br>(8)</td>
+                <td class="monster_weapon">Taishodon<br>(8)</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>4</th>
+                <td class="monster_drain">Twisty Hani<br>(5)</td>
+                <td class="monster_drain">Serious Slug<br>(8)</td>
+                <td class="monster_dragon">Shaaga<br>(8)</td>
+                <td class="monster_ghost">Pumphantom<br>(8)</td>
+                <td class="monster_bomb">Pop Tank<br>(8)</td>
+                <td class="monster_bomb">Wolf Droid<br>(8)</td>
+                <td class="monster_normal">Goat Pastor<br>(8)</td>
+                <td class="monster_water">Bored Kappa<br>(8)</td>
+                <td class="monster_normal">Armor Spider<br>(5)</td>
+              </tr>
+            </table>
+            <p class="dungeon_table_notes">3~5F total. No enemies on the final floor.</p>
           </div>
           <h2 id="items">Items</h2>
           <div class="dungeon_item_table_key">
@@ -1646,175 +1647,177 @@
                 ★ Possible drop from a higher level monster.
               </li>
             </ul>
+          </div>
           <h3>Shop + Trader</h3>
           <p class="dungeon_table_notes">
             The following items have only been seen on certain floor ranges.
           </p>
-          <table>
-            <tr>
-              <td colspan="3">Shop Items</td>
-            </tr>
-            <tr>
-              <th>Name</th>
-              <th>4~15F</th>
-              <th>17~20F</th>
-            </tr>
-            <tr>
-              <td>N'dubba</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>N'dubba 20yr</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Dried Bonito</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Power Pole</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Spear</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Leather Shield</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Blast Shield</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Holy Shield</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Counter Shield</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Paper Thin Bracelet</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Dragon Tile Bracelet</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Bend Bracelet</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Cannonball</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Expand Seed</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Life Grass</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Identify Scroll</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Slumber Scroll</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Balance Staff</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Happy Staff</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Slow Staff</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Unlucky Staff</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Presto Pot</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Water Pot</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-          </table>
-          <table>
-            <tr>
-              <td colspan="3">Trader Items</td>
-            </tr>
-            <tr>
-              <th>Name</th>
-              <th>1~15F</th>
-              <th>17~24F</th>
-            </tr>
-            <tr>
-              <td>Power Pole</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Leather Shield</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Holy Shield</td>
-              <td>☆</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Dragon Tile Bracelet</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Cannonball</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-            <tr>
-              <td>Synthesis Pot</td>
-              <td></td>
-              <td>☆</td>
-            </tr>
-          </table>
+          <div class="dungeon_item_table">
+            <table>
+              <tr>
+                <td colspan="3">Shop Items</td>
+              </tr>
+              <tr>
+                <th>Name</th>
+                <th>4~15F</th>
+                <th>17~20F</th>
+              </tr>
+              <tr>
+                <td>N'dubba</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>N'dubba 20yr</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Dried Bonito</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Power Pole</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Spear</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Leather Shield</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Blast Shield</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Holy Shield</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Counter Shield</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Paper Thin Bracelet</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Dragon Tile Bracelet</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Bend Bracelet</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Cannonball</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Expand Seed</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Life Grass</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Identify Scroll</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Slumber Scroll</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Balance Staff</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Happy Staff</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Slow Staff</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Unlucky Staff</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Presto Pot</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Water Pot</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <td colspan="3">Trader Items</td>
+              </tr>
+              <tr>
+                <th>Name</th>
+                <th>1~15F</th>
+                <th>17~24F</th>
+              </tr>
+              <tr>
+                <td>Power Pole</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Leather Shield</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Holy Shield</td>
+                <td>☆</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Dragon Tile Bracelet</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Cannonball</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+              <tr>
+                <td>Synthesis Pot</td>
+                <td></td>
+                <td>☆</td>
+              </tr>
+            </table>
           </div>
           <h2 id="floor_guide">Golden Interval</h2>
           <p>Text</p>
