Fixed name errors in monster table

--- a/html/dungeon/hidden_hole_b.html
+++ b/html/dungeon/hidden_hole_b.html
@@ -1083,7 +1083,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_normal">Big Chintala<br>(8)</td>
-                <td class="monster_drain">Sea Dragon<br>(8)</td>
+                <td class="monster_drain">Rancor Slug<br>(8)</td>
                 <td class="monster_drain">Famine Puppet<br>(8)</td>
                 <td class="monster_ghost">Zurukichi<br>(8)</td>
                 <td class="monster_dragon">Nashaaga<br>(8)</td>
@@ -1108,7 +1108,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_normal">Big Chintala<br>(8)</td>
-                <td class="monster_drain">Sea Dragon<br>(8)</td>
+                <td class="monster_drain">Rancor Slug<br>(8)</td>
                 <td class="monster_drain">Famine Puppet<br>(8)</td>
                 <td class="monster_ghost">Zurukichi<br>(8)</td>
                 <td class="monster_dragon">Nashaaga<br>(8)</td>
@@ -1133,7 +1133,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_normal">Big Chintala<br>(8)</td>
-                <td class="monster_drain">Sea Dragon<br>(8)</td>
+                <td class="monster_drain">Rancor Slug<br>(8)</td>
                 <td class="monster_drain">Famine Puppet<br>(8)</td>
                 <td class="monster_ghost">Zurukichi<br>(8)</td>
                 <td class="monster_dragon">Nashaaga<br>(8)</td>
@@ -1158,7 +1158,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_drain">Sea Dragon<br>(8)</td>
+                <td class="monster_drain">Rancor Slug<br>(8)</td>
                 <td class="monster_drain">Famine Puppet<br>(8)</td>
                 <td class="monster_ghost">Zurukichi<br>(8)</td>
                 <td class="monster_dragon">Nashaaga<br>(8)</td>
