missing div tag

--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -2406,7 +2406,8 @@
               </tr>
             </table>
             <p class="dungeon_table_notes">3~5F total. No enemies on the final floor.</p>
-            <h4>Second (70~80F, Return 81F)</h4>
+          </div>
+          <h4>Second (70~80F, Return 81F)</h4>
           <div class="sealed_room_monster_table_gold">
             <table>
               <tr>
