--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Shiren 2 | Halfway Well</title>
-    <link rel="icon" href="/shiren2/favicon.ico">
+    <link rel="icon" href="http://localhost/~tay/sharksnack.github.io/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
