add favicon to all existing pages

--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Shiren 2 | Shrine's Hidden Hole</title>
+    <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
