--- a/html/item/staff.html
+++ b/html/item/staff.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Shiren 2 | Staves</title>
+    <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
