tiny bit of cleanup

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -67,6 +67,9 @@
                   </ul>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
+                <ul>
+                  <li><a href="#monsters">Golden Interval</a></li>
+                </ul>
                 <li><a href="#items">Items</a></li>
                 <ul>
                   <li><a href="#golden_interval">Shop + Trader</a></li>
@@ -566,8 +569,7 @@
               Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
             </p>
           </div>
-          <h4>Golden Interval</h4>
-          <p class="dungeon_table_notes"></p>
+          <h3>Golden Interval</h3>
           <div class="dungeon_monster_table_gold">
             <table>
               <tr>
