--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -39,6 +39,9 @@
                   <li><a href="#hoof_rock_wall">45~99F</a></li>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
+                <ul>
+                  <li><a href="#items">Golden Interval</a></li>
+                </ul>
                 <li><a href="#items">Items</a></li>
                 <li><a href="#golden_interval">Golden Interval</a></li>
                 <ul>
@@ -133,7 +136,6 @@
           <h3 id="dark_night_cavern">45~99F</h3>
           <p></p>
           <h2 id="monsters">Monsters</h2>
-          <h3>Regular Floors</h3>
           <p class="dungeon_table_notes">
             Note: N'dubba monsters appear on all floors, and the floor number = N'dubba's age.<br>
             Example: N'dubba 99yr can be found on 99F.
