Added Road to the End dungeon page

--- a/html/dungeon/hidden_hole_b.html
+++ b/html/dungeon/hidden_hole_b.html
@@ -2886,7 +2886,7 @@
                 ★ Monster drops obtainable by altering enemy levels.
               </li>
               <li>
-                ※ 1 Escape Scroll is obtainable on 10F, 20F, and 99F. Cannot be found on any other floors, and is only obtainable before the first loop.
+                ※ 1 Escape Scroll is obtainable on 99F. Cannot be found on any other floors, and is only obtainable before the first loop.
               </li>
             </ul>
           </div>
