--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -74,6 +74,9 @@
                   </ul>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
+                <ul>
+                  <li><a href="#monsters">Golden Interval</a></li>
+                </ul>
                 <li><a href="#items">Items</a></li>
                 <li><a href="#golden_interval">Golden Interval</a></li>
               </ul>
