--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -30,7 +30,7 @@
     ┣ <a href="/shiren2/html/dungeon/hidden_hole_b.html">Hidden Hole (B)</a><br>
     ┣ <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a><br>
     ┣ <a href="/shiren2/html/dungeon/halfway_well.html">Halfway Well</a><br>
-    ┗ <a href="/shiren2/html/dungeon/road_to_the_end.html">Road to the End</a>
+    ┗ <a href="/shiren2/html/dungeon/road_to_the_end.html">Road To The End</a>
   </div>
   <div class="sidebar-category">System</div>
   <div class="sidebar-links">
